src/com/esvux/CompiladorGramatica/ParserGramatica.java
/* ParserGramatica.java */
/* Generated By:JavaCC: Do not edit this line. ParserGramatica.java */
package com.esvux.CompiladorGramatica;

import com.esvux.AST.gramatica.*;
import com.esvux.AST.*;
import java.util.ArrayList;
import java.util.Iterator;

public class ParserGramatica implements ParserGramaticaConstants {

  Gramatica gramatica;

  public static void main(String args[]) throws ParseException {
    ParserGramatica parser = new ParserGramatica(new java.io.StringReader(
                "Terminal id as String;\n"
                + "Terminal entero, caracter;\n"
                + "NoTerminal D, T, L;\n"
                + "Raiz = D;\n"
                + "D.Regla = T + L;\n"
                + "T.Regla = entero | caracter ;\n"
                + "L.Regla = L + id | id;\n"
    ));
    parser.gramatica = new Gramatica();
    parser.GRAMATICA();
    GeneradorLR gen = new GeneradorLR(parser.gramatica);
    gen.construirEstadosLR();
    System.out.println("Exito!!!");
  }

//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
/*                        Producción de inicio para el analizador                         */
//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
  final public void GRAMATICA() throws ParseException {
    label_1:
    while (true) {
      DEFINICIONES();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 5:
      case 12:
      case 13:
      case 19:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
  }

//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
/*                   Producción para la clasificación de las sentencias                   */
//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
  final public void DEFINICIONES() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 5:{
        TERMS();
        jj_consume_token(PYC);
        break;
        }
      case 12:{
        NOTERMS();
        jj_consume_token(PYC);
        break;
        }
      case 13:{
        REGS();
        jj_consume_token(PYC);
        break;
        }
      case 19:{
        RAIZ();
        jj_consume_token(PYC);
        break;
        }
      case ID:{
        REGLA();
        jj_consume_token(PYC);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
System.out.println(e.toString());
    Token t;
    do {
      t = getNextToken();
      //Ignora todos los tokens hasta encontrar el punto y coma ; = PYC, y reinicia el análisis.
    } while (t.kind != PYC);
    }
  }

//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
/*                    Producción para la declaración de los TERMINALES                    */
//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
  final public void TERMS() throws ParseException {ArrayList<String> lista;
  Token tipo=new Token();
    jj_consume_token(5);
    lista = L_ID();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 6:{
      jj_consume_token(6);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 7:{
        tipo = jj_consume_token(7);
        break;
        }
      case 8:{
        tipo = jj_consume_token(8);
        break;
        }
      case 9:{
        tipo = jj_consume_token(9);
        break;
        }
      case 10:{
        tipo = jj_consume_token(10);
        break;
        }
      case 11:{
        tipo = jj_consume_token(11);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
Iterator<String> it = lista.iterator();
    while(it.hasNext()){
      Elemento temp = Elemento.nuevoElemento(it.next());
      temp.setTipo(tipo.image);
      temp.marcarComoTerminal();
      this.gramatica.agregarElemento(temp);
    }
    Produccion.setGRAMATICA(this.gramatica);
  }

//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
/*                   Producción para la declaración de los NO TERMINALES                  */
//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
  final public void NOTERMS() throws ParseException {ArrayList<String> lista;
  Token tipo=new Token();
    jj_consume_token(12);
    lista = L_ID();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 6:{
      jj_consume_token(6);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 7:{
        tipo = jj_consume_token(7);
        break;
        }
      case 8:{
        tipo = jj_consume_token(8);
        break;
        }
      case 9:{
        tipo = jj_consume_token(9);
        break;
        }
      case 10:{
        tipo = jj_consume_token(10);
        break;
        }
      case 11:{
        tipo = jj_consume_token(11);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
Iterator<String> it = lista.iterator();
    while(it.hasNext()){
      Elemento temp = Elemento.nuevoElemento(it.next());
      temp.setTipo(tipo.image);
      temp.marcarComoNoTerminal();
      this.gramatica.agregarElemento(temp);
    }
    Produccion.setGRAMATICA(this.gramatica);
  }

//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
/*    Producción para registrar la precedencia de los terminales dentro de la gramática   */
//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
  final public void REGS() throws ParseException {ArrayList<String> lista;
  Token prec, asoc = new Token();
    jj_consume_token(13);
    jj_consume_token(14);
    prec = jj_consume_token(INT);
    jj_consume_token(15);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 16:
    case 17:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 16:{
        asoc = jj_consume_token(16);
        break;
        }
      case 17:{
        asoc = jj_consume_token(17);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(15);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    lista = L_ID();
    jj_consume_token(18);
this.gramatica.registrarPrecedencia(lista, Integer.parseInt(prec.image), asoc.image);
    Produccion.setGRAMATICA(this.gramatica);
  }

//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
/*        Producción para reconocer una lista de identificadores separados por coma       */
//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
  final public ArrayList<String> L_ID() throws ParseException {ArrayList<String> lista = new ArrayList<String>();
  Token elem1; Token elem2;
    elem1 = jj_consume_token(ID);
lista.add(elem1.image);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 15:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_2;
      }
      jj_consume_token(15);
      elem2 = jj_consume_token(ID);
lista.add(elem2.image);
    }
{if ("" != null) return lista;}
    throw new Error("Missing return statement in function");
  }

//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
/*                   Producción para registrar la raiz de la gramática                    */
//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
  final public void RAIZ() throws ParseException {Token raiz = new Token();
    jj_consume_token(19);
    jj_consume_token(20);
    raiz = jj_consume_token(ID);
this.gramatica.setRaiz(raiz.image);
  }

//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
/*              Producción para declarar las producciones de un NO TERMINAL               */
//<><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><><>
  final public void REGLA() throws ParseException {Produccion obligatoria, extra;
  Token izq;
    //<ID> ".Regla" "=" PROD() ( "|" PROD() )*
      izq = jj_consume_token(ID);
    jj_consume_token(21);
    jj_consume_token(20);
    obligatoria = PROD();
obligatoria.setLadoIzq(izq.image);
    this.gramatica.agregarProduccion(obligatoria);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 22:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      jj_consume_token(22);
      extra = PROD();
extra.setLadoIzq(izq.image);
      this.gramatica.agregarProduccion(extra);
    }
  }

  final public Produccion PROD() throws ParseException {ArrayList<String> lista = new ArrayList<String>();
  ArrayList<Nodo> accionesET = new ArrayList<Nodo>();
  ArrayList<Nodo> accionesDDS = new ArrayList<Nodo>();
  Token id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 24:{
      accionesET = ACCIONES();
lista.add(gramatica.agregarMarcador(accionesET));
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    id = jj_consume_token(ID);
lista.add(id.image);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 23:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      jj_consume_token(23);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 24:{
        accionesET = ACCIONES();
lista.add(gramatica.agregarMarcador(accionesET));
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      id = jj_consume_token(ID);
lista.add(id.image);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 24:{
      accionesDDS = ACCIONES();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
{if ("" != null) return Produccion.nuevaProduccion(lista, accionesDDS);}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Nodo> ACCIONES() throws ParseException {ArrayList<Nodo> acciones = new ArrayList<Nodo>(); Nodo accion=null;
    jj_consume_token(24);
    label_5:
    while (true) {
      accion = ACCION();
if(accion!=null)
          acciones.add(accion);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 26:
      case RSLT:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_5;
      }
    }
    jj_consume_token(25);
{if ("" != null) return acciones;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo ACCION() throws ParseException {Nodo nodo = null;
    try {
      if (jj_2_1(2)) {
        nodo = ASIGNACION();
        jj_consume_token(PYC);
      } else if (jj_2_2(2)) {
        nodo = CALL_METODO();
        jj_consume_token(PYC);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 26:{
          nodo = CALL_WRITE();
          jj_consume_token(PYC);
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
System.out.println(nodo.getDOT());
    } catch (ParseException e) {
System.out.println(e.toString());
    Token t;
    do {
      t = getNextToken();
      //Ignora todos los tokens hasta encontrar el punto y coma ; = PYC, y reinicia el análisis.
    } while (t.kind != PYC);
    }
{if ("" != null) return nodo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo ASIGNACION() throws ParseException {Nodo dest, exp;
    dest = DESTINO();
    jj_consume_token(20);
    exp = EXPRESION();
Nodo nodo = new Nodo(Nodo.ASIGNACION);
    nodo.addNodo(dest);
    nodo.addNodo(exp);
    {if ("" != null) return nodo;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo CALL_METODO() throws ParseException {ArrayList<Nodo> params;
  Token valor;
    valor = jj_consume_token(ID);
    jj_consume_token(14);
    params = PARAMS();
    jj_consume_token(18);
{if ("" != null) return new Nodo(Nodo.METODO, valor.image, params);}
    throw new Error("Missing return statement in function");
  }

  final public Nodo CALL_WRITE() throws ParseException {Nodo exp;
    jj_consume_token(26);
    jj_consume_token(14);
    exp = EXPRESION();
    jj_consume_token(18);
Nodo nodo = new Nodo(Nodo.WRITE);
    nodo.addNodo(exp);
    {if ("" != null) return nodo;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Nodo> PARAMS() throws ParseException {ArrayList<Nodo> params = new ArrayList<Nodo>();
  Nodo nodo;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 14:
    case 28:
    case 33:
    case 46:
    case 48:
    case 49:
    case RSLT:
    case ID:
    case CHAR:
    case STR:
    case INT:
    case DEC:{
      nodo = EXPRESION();
params.add(nodo);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 15:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_6;
        }
        jj_consume_token(15);
        nodo = EXPRESION();
params.add(nodo);
      }
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
{if ("" != null) return params;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo DESTINO() throws ParseException {Nodo nodo = null;
  Token valor, atrb = null;
  ArrayList<Nodo> dims = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      valor = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 28:{
        dims = DIMENSIONES();
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        ;
      }
if(dims==null)
        nodo = new Nodo(Nodo.VARIABLE, valor.image);
      else
        nodo = new Nodo(Nodo.ARREGLO, valor.image, dims);
      break;
      }
    case RSLT:{
      valor = jj_consume_token(RSLT);
      jj_consume_token(27);
      atrb = jj_consume_token(ID);
nodo = new Nodo(Nodo.RESULT, valor.image);
      Nodo temp;
      if(atrb.image.endsWith("H"))
        temp = new Nodo(Nodo.HEREDADO, atrb.image);
      else
        temp = new Nodo(Nodo.SINTETIZADO, atrb.image);
      nodo.addNodo(temp);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return nodo;}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList<Nodo> DIMENSIONES() throws ParseException {ArrayList<Nodo> dims = new ArrayList<Nodo>(); Nodo nodo;
    jj_consume_token(28);
    nodo = EXP();
    jj_consume_token(29);
dims.add(nodo);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 28:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_7;
      }
      jj_consume_token(28);
      nodo = EXP();
      jj_consume_token(29);
dims.add(nodo);
    }
{if ("" != null) return dims;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo EXPRESION() throws ParseException {Nodo expresion;
    expresion = LOG();
{if ("" != null) return expresion;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo LOG() throws ParseException {Nodo ret = null, or, orExtra;
    or = LOG_OR();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 30:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_8;
      }
      jj_consume_token(30);
      orExtra = LOG_OR();
ret = new Nodo(Nodo.OR);
            ret.addNodo(or);
            ret.addNodo(orExtra);
    }
if(ret==null) {if ("" != null) return or;} {if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo LOG_OR() throws ParseException {Nodo ret = null, xor, xorExtra;
    xor = LOG_XOR();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 31:{
        ;
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        break label_9;
      }
      jj_consume_token(31);
      xorExtra = LOG_XOR();
ret = new Nodo(Nodo.XOR);
            ret.addNodo(xor);
            ret.addNodo(xorExtra);
    }
if(ret==null) {if ("" != null) return xor;} {if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo LOG_XOR() throws ParseException {Nodo ret = null, and, andExtra;
    and = LOG_AND();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 32:{
        ;
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        break label_10;
      }
      jj_consume_token(32);
      andExtra = LOG_AND();
ret = new Nodo(Nodo.AND);
              ret.addNodo(and);
              ret.addNodo(andExtra);
    }
if(ret==null) {if ("" != null) return and;} {if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo LOG_AND() throws ParseException {Nodo ret = null, nodo;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 33:{
      jj_consume_token(33);
      nodo = LOG_AND();
ret = new Nodo(Nodo.NOT);
      ret.addNodo(nodo);
      break;
      }
    case 14:
    case 28:
    case 46:
    case 48:
    case 49:
    case RSLT:
    case ID:
    case CHAR:
    case STR:
    case INT:
    case DEC:{
      ret = REL();
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
  }
